# generador-armamento

./: 12345678-prueba.csv  CMakeLists.txt  README.md  main.cpp  test_cola.sh  test_lista_circular.sh  valgrind.sh
.github/classroom/: autograding.json
include/: armamento_artefactos.hpp  artefacto.hpp  cola.hpp  combate.hpp  combate_multiple.hpp  lista_circular.hpp  menu.hpp  menu_armamento.hpp  menu_combates_multiples.hpp  nodo.hpp
src/: armamento_artefactos.cpp  artefacto.cpp  combate.cpp  combate_multiple.cpp  menu.cpp  menu_armamento.cpp  menu_combates_multiples.cpp
tests/cola/: CMakeLists.txt  cola_test.cpp
tests/lista_circular/: CMakeLists.txt  lista_circular_test.cpp
